--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "app_movies",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "pg": "^8.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "name": "flores-amarillas",
+    "version": "1.0.0",
+    "main": "src/index.js",
+    "type": "module",
+    "scripts": {
+      "start": "node src/index.js",
+      "dev": "nodemon src/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+      "cors": "^2.8.5",
+      "ejs": "^3.1.10",
+      "express": "^4.19.2",
+      "morgan": "^1.10.0",
+      "pg": "^8.12.0"
+    },
+    "devDependencies": {
+      "nodemon": "^3.1.4"
+    },
+    "engines": {
+      "node": "20.x"
+    }
   }
-}
+  
